refractoring, flex e força

--- a/src/app/avaliation/CardioPulmunar/banco/banco.component.html
+++ b/src/app/avaliation/CardioPulmunar/banco/banco.component.html
@@ -32,7 +32,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n>Passadas min</th>
+                        <th i18n>Passadas minuto</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].min0}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].min0}}</td>
                         <td *ngIf="addEval">
