--- a/src/app/avaliation/dobras/all-dobras/all-dobras.component.html
+++ b/src/app/avaliation/dobras/all-dobras/all-dobras.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="header">
-        <h3 i18n>Todas as Dobras</h3>
+        <h1 i18n>Todas as Dobras</h1>
     </div>
     <div class="section">
         <form #f="ngForm" (submit)="save(f.value)">
@@ -169,13 +169,14 @@
                 </button>
             </div>
         </form>
+
         <div *ngIf="showChart">
             <br />
             <hr />
             <h4 style="text-align: center; color: blue;">
                 {{selectedEvaluation.data | date:'dd-LL-yyyy'}}
             </h4>
-            <div style="text-align: center; color: blue;">
+<!--             <div style="text-align: center; color: blue;">
                 <mat-label i18n>% Gordura desejada <small>[{{gorduraDesejada}}]</small>: </mat-label>
                 <mat-slider min="10" max="30" step="1" thumbLabel="true" [(ngModel)]="gorduraDesejada"
                     [disabled]="!fatChanged" (change)="getNewEvaluation()">
@@ -186,10 +187,10 @@
                 <button mat-mini-fab (click)="saveFatChange()" *ngIf="fatChanged">
                     <mat-icon>save</mat-icon>
                 </button>
-            </div>
+            </div> -->
 
-            <app-chart-pie [values]="single"></app-chart-pie>
-            <app-chart-pie [values]="single2"></app-chart-pie>
+    <!--         <app-chart-pie [values]="single"></app-chart-pie>
+            <app-chart-pie [values]="single2"></app-chart-pie> -->
         </div>
     </div>
 
