--- a/src/app/avaliation/flexibilidade/banco-wells-dillon/banco-wells-dillon.component.html
+++ b/src/app/avaliation/flexibilidade/banco-wells-dillon/banco-wells-dillon.component.html
@@ -1,92 +1,303 @@
 <div class="container">
     <div class="header">
         <h3>Banco de Wells & Dillon (adaptado)</h3>
-    </div> 
+    </div>
     <div class="section">
-     <form #f="ngForm" (submit)="save(f.value)">
-         <table class="section-table">
-             <thead>
-                 <tr>
-                     <th>&nbsp;</th>
-                     <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}</th>
-                     <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd-LL-yyyy'}}</th>
-                     <th class="th-top" *ngIf="addEval">
-                         <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
-                             style="width: 110px;">
-                     </th>
-                 </tr>
-             </thead>
-             <tbody>
-                <tr>
-                    <th><span>Flexibilidade</span></th>
-                    <td *ngIf="pointer>=1">{{evaluation[pointer-1].flex}}</td>
-                    <td *ngIf="pointer>=0">{{evaluation[pointer].flex}}</td>
-                    <td *ngIf="addEval">
-                        <input name="flex" #flex="ngModel" [(ngModel)]="newEvaluation.flex"
-                             type="number" step="0.1">
-                    </td>
-                </tr>
-                <tr>
-                    <th><span>Classificação</span></th>
-                    <td *ngIf="pointer>=1">{{evaluation[pointer-1].xclasse}}</td>
-                    <td *ngIf="pointer>=0">{{evaluation[pointer].xclasse}}</td>
-                    <td *ngIf="addEval">&nbsp;</td>
-                </tr>
-              </tbody>
-         </table>
- 
-         <div class="action">
-             <button type="button" *ngIf="!addEval" [disabled]="pointer<=1" mat-mini-fab color="default"
-                 (click)="pointer=pointer-1">
-                 <mat-icon class="mat-14">chevron_left</mat-icon>
-             </button>
-             <button type="button" *ngIf="!addEval" mat-fab (click)="addEvaluation()">
-                 <mat-icon class="mat-18">add</mat-icon>
-             </button>
-             <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1" mat-mini-fab
-                 color="default" (click)="pointer=pointer+1">
-                 <mat-icon class="mat-14">chevron_right</mat-icon>
-             </button>
-             <button type="button" *ngIf="addEval" mat-fab color="default" (click)="closeInput()">
-                 <mat-icon class="mat-18">close</mat-icon>
-             </button>
-             <button *ngIf="addEval" mat-fab>
-                 <mat-icon class="mat-18">check</mat-icon>
-             </button>
-         </div>
-     </form>
+        <form #f="ngForm" (submit)="save(f.value)">
+            <table class="section-table">
+                <thead>
+                    <tr>
+                        <th>&nbsp;</th>
+                        <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}</th>
+                        <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd-LL-yyyy'}}</th>
+                        <th class="th-top" *ngIf="addEval">
+                            <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
+                                style="width: 110px;">
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th><span>Flexibilidade</span></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].flex}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].flex}}</td>
+                        <td *ngIf="addEval">
+                            <input name="flex" #flex="ngModel" [(ngModel)]="newEvaluation.flex" type="number"
+                                step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th><span>Classificação</span></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].xclasse}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].xclasse}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr>
+                </tbody>
+            </table>
 
-    <div class="section-info">
-        <mat-card>
-            <mat-card-header>
-                <mat-card-title>Banco Wells & Dillon</mat-card-title>
-                <mat-card-subtitle>Descrição do Teste de Flexibilidade</mat-card-subtitle>
-            </mat-card-header>
+            <div class="action">
+                <button type="button" *ngIf="!addEval" [disabled]="pointer<=1" mat-mini-fab color="default"
+                    (click)="pointer=pointer-1">
+                    <mat-icon class="mat-14">chevron_left</mat-icon>
+                </button>
+                <button type="button" *ngIf="!addEval" mat-fab (click)="addEvaluation()">
+                    <mat-icon class="mat-18">add</mat-icon>
+                </button>
+                <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1"
+                    mat-mini-fab color="default" (click)="pointer=pointer+1">
+                    <mat-icon class="mat-14">chevron_right</mat-icon>
+                </button>
+                <button type="button" *ngIf="addEval" mat-fab color="default" (click)="closeInput()">
+                    <mat-icon class="mat-18">close</mat-icon>
+                </button>
+                <button *ngIf="addEval" mat-fab>
+                    <mat-icon class="mat-18">check</mat-icon>
+                </button>
+            </div>
+        </form>
+
+        <div class="section-info">
+            <mat-card>
+                <mat-card-header>
+                    <mat-card-title>Banco Wells & Dillon</mat-card-title>
+                    <mat-card-subtitle>Descrição do Teste de Flexibilidade</mat-card-subtitle>
+                </mat-card-header>
                 <mat-video [autoplay]="true" [preload]="true" spinner="spin" [loop]="true" [muted]="false">
                     <source matVideoSource src="./assets/videos/BANCO.mp4" type="video/mp4">
                 </mat-video>
-            <mat-card-content>
-                <p>O Avaliado deve sentar no solo, com membros inferiores estendidos, 
-                    com a região plantar apoiada no banco (encostado na parede).</p>
-                <p> Com os braços estendidos sobre a cabeça e mãos paralelas, realizando três tentativas, com intervalos de
-                    recuperação, e flexionar lentamente o tronco até o máximo, mantendo os membros inferiores
-                    estendidos.</p>
-                <p> Devendo registrar o maior índice alcançado (ACSM, 2000).</p>
-            </mat-card-content>
-        </mat-card>
+                <mat-card-content>
+                    <p>O Avaliado deve sentar no solo, com membros inferiores estendidos,
+                        com a região plantar apoiada no banco (encostado na parede).</p>
+                    <p> Com os braços estendidos sobre a cabeça e mãos paralelas, realizando três tentativas, com
+                        intervalos de
+                        recuperação, e flexionar lentamente o tronco até o máximo, mantendo os membros inferiores
+                        estendidos.</p>
+                    <p> Devendo registrar o maior índice alcançado (ACSM, 2000).</p>
+
+                    <br/>
+                    <h5>VALORES DE REFERÊNCIA PARA O TESTE DE FLEXIBILIDADE</h5>
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Faixa Etária</th>
+                                <th>Excelente</th>
+                                <th>Muito Bom</th>
+                                <th>Bom</th>
+                                <th>Regular</th>
+                                <th>Fraco</th>
+                            </tr>
+                        </thead>
+                        <tbody *ngIf="selectedStudent.sexo=='M'">
+                            <tr>
+                                <th>15-19</th>
+                                <td>&gt; 39</td>
+                                <td>34 - 38</td>
+                                <td>29 - 33</td>
+                                <td>24 - 28</td>
+                                <td>&lt; 24</td>
+                            </tr>
+                            <tr>
+                                <th>20-29</th>
+                                <td>&gt; 40</td>
+                                <td>34 - 39</td>
+                                <td>30 - 33</td>
+                                <td>25 - 29</td>
+                                <td>&lt; 25</td>
+                            </tr>
+                            <tr>
+                                <th>30-39</th>
+                                <td>&gt; 38</td>
+                                <td>33 - 37</td>
+                                <td>28 - 32</td>
+                                <td>23 - 27</td>
+                                <td>&lt; 25</td>
+                            </tr>
+                            <tr>
+                                <th>40-49</th>
+                                <td>&gt; 35</td>
+                                <td>29 - 34</td>
+                                <td>24 - 28</td>
+                                <td>17 - 23</td>
+                                <td>&lt; 17</td>
+                            </tr>
+                            <tr>
+                                <th>50-59</th>
+                                <td>&gt; 35</td>
+                                <td>28 - 34</td>
+                                <td>24 - 27</td>
+                                <td>16 - 23</td>
+                                <td>&lt; 16</td>
+                            </tr>
+                            <tr>
+                                <th>60-69</th>
+                                <td>&gt; 33</td>
+                                <td>25 - 32</td>
+                                <td>20 - 24</td>
+                                <td>15 - 19</td>
+                                <td>&lt; 15</td>
+                            </tr>
+                        </tbody>
+                        <tbody *ngIf="selectedStudent.sexo=='F'">
+                            <tr>
+                                <th>15-19</th>
+                                <td>&gt; 43</td>
+                                <td>38 - 42</td>
+                                <td>34 - 37</td>
+                                <td>29 - 33</td>
+                                <td>&lt; 29</td>
+                            </tr>
+                            <tr>
+                                <th>20-29</th>
+                                <td>&gt; 41</td>
+                                <td>37 - 40</td>
+                                <td>33 - 36</td>
+                                <td>28 - 32</td>
+                                <td>&lt; 28</td>
+                            </tr>
+                            <tr>
+                                <th>30-39</th>
+                                <td>&gt; 41</td>
+                                <td>36 - 40</td>
+                                <td>32 - 35</td>
+                                <td>27 - 31</td>
+                                <td>&lt; 27</td>
+                            </tr>
+                            <tr>
+                                <th>40-49</th>
+                                <td>&gt; 38</td>
+                                <td>34 - 37</td>
+                                <td>30 - 33</td>
+                                <td>25 - 29</td>
+                                <td>&lt; 25</td>
+                            </tr>
+                            <tr>
+                                <th>50-59</th>
+                                <td>&gt; 39</td>
+                                <td>33 - 38</td>
+                                <td>30 - 32</td>
+                                <td>25 - 29</td>
+                                <td>&lt; 25</td>
+                            </tr>
+                            <tr>
+                                <th>60-69</th>
+                                <td>&gt; 35</td>
+                                <td>31 - 34</td>
+                                <td>27 - 30</td>
+                                <td>24 - 26</td>
+                                <td>&lt; 24</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <em>Fonte: Canada Fitness Survey, (1981) - Pollock &  Wilmore (1993)</em>
+
+ <!--                    <br/>
+                    <h5>VALORES DE REFERÊNCIA PARA O VO&#178;</h5>
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Faixa Etária</th>
+                                <th>Excelente</th>
+                                <th>Muito Bom</th>
+                                <th>Bom</th>
+                                <th>Regular</th>
+                                <th>Fraco</th>
+                            </tr>
+                        </thead>
+                        <tbody *ngIf="selectedStudent.sexo=='M'">
+                            <tr>
+                                <th>20-29</th>
+                                <td>&gt; 53</td>
+                                <td>43 - 52</td>
+                                <td>34 - 42</td>
+                                <td>25 - 32</td>
+                                <td>&lt; 25</td>
+                            </tr>
+                            <tr>
+                                <th>30-39</th>
+                                <td>&gt; 49</td>
+                                <td>39 - 48</td>
+                                <td>31 - 38</td>
+                                <td>23 - 30</td>
+                                <td>&lt; 23</td>
+                            </tr>
+                            <tr>
+                                <th>40-49</th>
+                                <td>&gt; 45</td>
+                                <td>36 - 44</td>
+                                <td>27 - 35</td>
+                                <td>20 - 26</td>
+                                <td>&lt; 20</td>
+                            </tr>
+                            <tr>
+                                <th>50-59</th>
+                                <td>&gt; 43</td>
+                                <td>34 - 42</td>
+                                <td>25 - 33</td>
+                                <td>18 - 24</td>
+                                <td>&lt; 18</td>
+                            </tr>
+                            <tr>
+                                <th>60-69</th>
+                                <td>&gt; 41</td>
+                                <td>31 - 40</td>
+                                <td>23 - 30</td>
+                                <td>16 - 22</td>
+                                <td>&lt; 16</td>
+                            </tr>
+                        </tbody>
+                        <tbody *ngIf="selectedStudent.sexo=='F'">
+                            <tr>
+                                <th>20-29</th>
+                                <td>&gt; 49</td>
+                                <td>38 - 48</td>
+                                <td>31 - 37</td>
+                                <td>24 - 30</td>
+                                <td>&lt; 24</td>
+                            </tr>
+                            <tr>
+                                <th>30-39</th>
+                                <td>&gt; 45</td>
+                                <td>34 - 44</td>
+                                <td>28 - 33</td>
+                                <td>20 - 27</td>
+                                <td>&lt; 20</td>
+                            </tr>
+                            <tr>
+                                <th>40-49</th>
+                                <td>&gt; 42</td>
+                                <td>31 - 41</td>
+                                <td>24 - 30</td>
+                                <td>17 - 23</td>
+                                <td>&lt; 27</td>
+                            </tr>
+                            <tr>
+                                <th>50-59</th>
+                                <td>&gt; 38</td>
+                                <td>28 - 37</td>
+                                <td>21 - 27</td>
+                                <td>15 - 20</td>
+                                <td>&lt; 15</td>
+                            </tr>
+                            <tr>
+                                <th>60-69</th>
+                                <td>&gt; 36</td>
+                                <td>24 - 35</td>
+                                <td>18 - 23</td>
+                                <td>13 - 17</td>
+                                <td>&lt; 13</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <em>Fonte: AHA - ACSM (1980)</em> -->
+                </mat-card-content>
+            </mat-card>
+        </div>
+
     </div>
 
+    <div class="footer">
+        <a mat-mini-fab color="primary" (click)="goBack()">
+            <mat-icon>undo</mat-icon>
+        </a>
+    </div>
 </div>
-
- <div class="footer">
- <a mat-mini-fab color="primary" (click)="goBack()">
- <mat-icon>undo</mat-icon>
- </a>
- </div>
- </div>
- 
-
-
-
-
-
