--- a/src/app/avaliation/frm/frm.component.scss
+++ b/src/app/avaliation/frm/frm.component.scss
@@ -2,3 +2,29 @@
   flex-direction: column;
   justify-content: start;
 }
+
+.table{
+  width: 100%;
+  margin: auto;
+  font-size: smaller;
+  td, th {
+    border: 1px solid #999;
+    padding: 0.5rem;
+  }
+  td{
+    text-align: center;
+  }
+}
+h5{
+  text-align: center;
+  font-weight: 600;
+  text-decoration: underline;
+}
+
+@media only screen and (min-width: 768px){
+  .section-info{
+    width: 60%;
+    margin: auto;
+    margin-top: 20px;;
+  }
+}
