--- a/src/app/avaliation/risco/rdc/rdc.component.html
+++ b/src/app/avaliation/risco/rdc/rdc.component.html
@@ -14,13 +14,13 @@
                         <mat-list-item>
                             <mat-form-field>
                                 <mat-label i18n>Sistólica</mat-label>
-                                <input matInput #qtas="ngModel" name="qtas" [(ngModel)]="rdcData.qtas" (change)="calcRisco()">
+                                <input matInput #qtas="ngModel" name="qtas" [(ngModel)]="rdcData.qtas" (change)="calcRisco(f.value)">
                             </mat-form-field>
                         </mat-list-item>
                         <mat-list-item>
                             <mat-form-field>
                                 <mat-label i18n>Diastólica</mat-label>
-                                <input matInput #qtad="ngModel" name="qtad" [(ngModel)]="rdcData.qtad" (change)="calcRisco()">
+                                <input matInput #qtad="ngModel" name="qtad" [(ngModel)]="rdcData.qtad" (change)="calcRisco(f.value)">
                             </mat-form-field>
                         </mat-list-item>
                     </mat-list>
@@ -50,25 +50,25 @@
                         <mat-list-item>
                             <mat-form-field>
                                 <mat-label i18n>Colesterol Total</mat-label>
-                                <input matInput #lsc="ngModel" name="lsc" [(ngModel)]="rdcData.lsc" (change)="calcRisco()">
+                                <input matInput #lsc="ngModel" name="lsc" [(ngModel)]="rdcData.lsc" (change)="calcRisco(f.value)">
                             </mat-form-field>
                         </mat-list-item>
                         <mat-list-item>
                             <mat-form-field>
                                 <mat-label i18n>Fração CT/HDL-C</mat-label>
-                                <input matInput #lsf="ngModel" name="lsf" [(ngModel)]="rdcData.lsf" (change)="calcRisco()">
+                                <input matInput #lsf="ngModel" name="lsf" [(ngModel)]="rdcData.lsf" (change)="calcRisco(f.value)">
                             </mat-form-field>
                         </mat-list-item>
                         <mat-list-item>
                             <mat-form-field>
                                 <mat-label i18n>Triglicerídeos</mat-label>
-                                <input matInput #lst="ngModel" name="lst" [(ngModel)]="rdcData.lst" (change)="calcRisco()">
+                                <input matInput #lst="ngModel" name="lst" [(ngModel)]="rdcData.lst" (change)="calcRisco(f.value)">
                             </mat-form-field>
                         </mat-list-item>
                         <mat-list-item>
                             <mat-form-field>
                                 <mat-label i18n>Glicemia</mat-label>
-                                <input matInput #lsg="ngModel" name="lsg" [(ngModel)]="rdcData.lsg" (change)="calcRisco()">
+                                <input matInput #lsg="ngModel" name="lsg" [(ngModel)]="rdcData.lsg" (change)="calcRisco(f.value)">
                             </mat-form-field>
                         </mat-list-item>
                     </mat-list>
@@ -82,7 +82,7 @@
                     <mat-list>
                         <mat-list-item>
                             <mat-form-field>
-                                <mat-select #diabetes="ngModel" name="diabetes" [(ngModel)]="rdcData.diabetes" (selectionChange)="calcRisco()">
+                                <mat-select #diabetes="ngModel" name="diabetes" [(ngModel)]="rdcData.diabetes" (selectionChange)="calcRisco(f.value)">
                                     <mat-option value="0" i18n>Não</mat-option>
                                     <mat-option value="1" i18n>DMNID*</mat-option>
                                     <mat-option value="2" i18n>DMNID* Recente</mat-option>
@@ -103,7 +103,7 @@
                         <mat-list-item>
                             <mat-form-field>
                                 <mat-label i18n>Percentagem</mat-label>
-                                <input matInput #gc="ngModel" name="gc" [(ngModel)]="rdcData.gc" (change)="calcRisco()">
+                                <input matInput #gc="ngModel" name="gc" [(ngModel)]="rdcData.gc" (change)="calcRisco(f.value)">
                             </mat-form-field>
                         </mat-list-item>
                     </mat-list>
@@ -117,7 +117,7 @@
                     <mat-list>
                         <mat-list-item>
                             <mat-form-field>
-                                <mat-select #st="ngModel" name="st" [(ngModel)]="rdcData.st" (selectionChange)="calcRisco()">
+                                <mat-select #st="ngModel" name="st" [(ngModel)]="rdcData.st" (selectionChange)="calcRisco(f.value)">
                                     <mat-option value="0" i18n>Nunca</mat-option>
                                     <mat-option value="1" i18n>quase nunca</mat-option>
                                     <mat-option value="2" i18n>às vezes</mat-option>
@@ -139,13 +139,13 @@
                             <mat-form-field>
                                 <mat-label i18n>Frequência Semanal</mat-label>
                                 <input matInput #fs="ngModel" name="fs" [(ngModel)]="rdcData.fs"
-                                    placeholder="vezes por semana" (change)="calcRisco()">
+                                    placeholder="vezes por semana" (change)="calcRisco(f.value)">
                             </mat-form-field>
                         </mat-list-item>
                         <mat-list-item>
                             <mat-form-field>
                                 <mat-label i18n>Minutos/Semana</mat-label>
-                                <mat-select #af50="ngModel" name="af50" [(ngModel)]="rdcData.af50" (selectionChange)="calcRisco()">
+                                <mat-select #af50="ngModel" name="af50" [(ngModel)]="rdcData.af50" (selectionChange)="calcRisco(f.value)">
                                     <mat-option value="0">120</mat-option>
                                     <mat-option value="1">90</mat-option>
                                     <mat-option value="2">30</mat-option>
